--- a/n3iwf-install.yml
+++ b/n3iwf-install.yml
@@ -21,11 +21,11 @@
             HOME_DIR: "/root"
             FREE5GC_GIT_CHECKOUT_URL_FREEGC_TAG_VERSION: "--recursive -b v3.1.1 -j `nproc` https://github.com/free5gc/free5gc.git"
             FREE5GC_CHECKOUT_FOLDER_NAME: "free5gc"
-            N3IWF_IKE_BIND_ADDRESS: "20.20.0.10"
+            N3IWF_IKE_BIND_ADDRESS: "<<IP-address-for-IKE-communication-visible-to-UEnon3GPP>>"
             N3IWF_IP_SEC_INTERFACE_ADDRESS: "10.0.0.1"
             N3IWF_IP_SEC_INTERFACE_ADDRESS_VTI_RANGE: "10.0.0.1/24"
             N3IWF_UE_IP_ADDRESS_RANGE: "10.0.0.0/24"
-            N3IWF_GTP_BIND_ADDRESS: "10.200.200.2"
+            N3IWF_GTP_BIND_ADDRESS: "<<5G-core-ip-address-for-connection-to-AMF>>"
             N3IWF_IPSEC_INTERFACE_NAME: "ipsec0"
             N3IWF_IP_SEC_INTERFACE_MARK: "5"
             N3IWF_NAS_TCP_PORT: "20000"
